# hireagent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: resume.hash
data/cache/: analysis_cache.json
data/history/: history.json
src/hireagent/agents/: __init__.py  gap_analyzer.py  graph.py  matcher.py  parser.py  state.py  writer.py
src/hireagent/rag/: document_loader.py  embeddings.py  pipeline.py  vector_store.py
src/hireagent/ui/: app.py
tests/: test_rag.py
